--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/mehsieh89/herokuDeploymentExample/issues"
   },
-  "homepage": "https://github.com/mehsieh89/herokuDeploymentExample#readme"
+  "homepage": "https://github.com/mehsieh89/herokuDeploymentExample#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3"
+  }
 }
